build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/Regression/GitHub/2591-separate-function-preserve.phpt.warn
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	'.'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'OK'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'assertions'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
